Fix/MM2-176 - Direct Deposit: In the Spanish language Button text not showing properly.

--- a/src/app/modules/deposit/direct-deposit/container/direct-deposit.page.scss
+++ b/src/app/modules/deposit/direct-deposit/container/direct-deposit.page.scss
@@ -72,3 +72,7 @@
     }
   }
 }
+
+.white-button {
+  white-space: nowrap !important;
+}
